--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="titleBody">
                     <div class="titleBlock">
                         <div class="titleBox">
-                            <h1>Our Courses</h1>
+                            <h1>Our Course</h1>
                         </div>
                     </div>
                 </div>
