--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Courses</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
@@ -26,10 +26,10 @@
                 </div>
                 <div class="coursesTopBody grid-3">
                     <div class="fullStackBlock">
-                        <div class="fullStackBox">
+                        <div class="fullStackBox dflex-col">
                             <div class="card">
                                 <div class="card-image">
-                                    <img src="./assets/images/fullstack.webp" alt="AI Support Icon">
+                                    <img src="./assets/images/fullstack.webp" alt="fullstack">
                                 </div>
                                 <div class="card-content">
                                     <h3>Full-Stack Developer</h3>
@@ -43,10 +43,10 @@
                         </div>
                     </div>
                     <div class="iotBlock">
-                        <div class="iotBox">
+                        <div class="iotBox dflex-col">
                             <div class="card">
                                 <div class="card-image">
-                                    <img src="./assets/images/iot.webp" alt="AI Support Icon">
+                                    <img src="./assets/images/iot.webp" alt="iot">
                                 </div>
                                 <div class="card-content">
                                     <h3>IoT / Embedded</h3>
@@ -61,10 +61,10 @@
                         </div>
                     </div>
                     <div class="dataScienceBlock">
-                        <div class="dataScienceBox">
+                        <div class="dataScienceBox dflex-col">
                             <div class="card">
                                 <div class="card-image">
-                                    <img src="./assets/images/datascience.webp" alt="AI Support Icon">
+                                    <img src="./assets/images/datascience.webp" alt="datascience">
                                 </div>
                                 <div class="card-content">
                                     <h3>Data Science</h3>
@@ -80,10 +80,10 @@
                 </div>
                 <div class="coursesMidBody grid-3">
                     <div class="aiBlock">
-                        <div class="aiBox">
+                        <div class="aiBox dflex-col">
                             <div class="card">
                                 <div class="card-image">
-                                    <img src="./assets/images/ai.webp" alt="AI Support Icon">
+                                    <img src="./assets/images/ai.webp" alt="AI">
                                 </div>
                                 <div class="card-content">
                                     <h3>Artificial intelligence</h3>
@@ -98,10 +98,10 @@
                         </div>
                     </div>
                     <div class="appBlock">
-                        <div class="appBox">
+                        <div class="appBox dflex-col">
                             <div class="card">
                                 <div class="card-image">
-                                    <img src="./assets/images/app development.webp" alt="AI Support Icon">
+                                    <img src="./assets/images/app development.webp" alt="app">
                                 </div>
                                 <div class="card-content">
                                     <h3>App development</h3>
@@ -116,10 +116,10 @@
                         </div>
                     </div>
                     <div class="mlBlock">
-                        <div class="mlBox">
+                        <div class="mlBox dflex-col">
                             <div class="card">
                                 <div class="card-image">
-                                    <img src="./assets/images/machine learning.webp" alt="AI Support Icon">
+                                    <img src="./assets/images/machine learning.webp" alt="ml">
                                 </div>
                                 <div class="card-content">
                                     <h3>Machine Learning</h3>
@@ -136,10 +136,10 @@
                 </div>   
                 <div class="coursesBottomBody grid-1">
                      <div class="gameBlock">
-                        <div class="gameBox">
+                        <div class="gameBox dflex-col">
                             <div class="card">
                                 <div class="card-image">
-                                    <img src="./assets/images/game development.webp" alt="AI Support Icon">
+                                    <img src="./assets/images/game development.webp" alt="game">
                                 </div>
                                 <div class="card-content">
                                     <h3>Game Development</h3>
